--- a/tasks/stop.yml
+++ b/tasks/stop.yml
@@ -1,3 +1,6 @@
 ---
 - name: stop zookeeper
+  failed_when:
+    - '"Could not find the requested service" not in service_stop.stdout'
+    - service_stop.rc != 0
   service: name=zookeeper-server state=stopped
