--- a/tasks/stop.yml
+++ b/tasks/stop.yml
@@ -2,6 +2,6 @@
 - name: stop zookeeper
   register: service_stop
   failed_when:
-    - '"Could not find the requested service" not in service_stop.stdout'
+    - '"Could not find the requested service" not in service_stop.msg'
     - service_stop.rc != 0
   service: name=zookeeper-server state=stopped
