--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -2,22 +2,19 @@
 
 ## Install Java
 
-- name: java | Accept Oracle license prior JDK installation
-  shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections; echo debconf shared/accepted-oracle-license-v1-1 seen true | sudo debconf-set-selections
-    creates=/usr/lib/jvm/java-8-oracle
-
-- name: java | add repository
-  apt_repository:
-    repo=ppa:webupd8team/java
-    state=present
-
-- name: update repositories cache
-  apt: update_cache=yes
-
-- name: java | Install dependencies
+- name: Update APT package manager repositories cache
+  become: true
   apt:
-    pkg=oracle-java8-installer
-    state=present
+    update_cache: yes
+
+- name: Install Java using Ansible
+  become: true
+  apt:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+        - openjdk-11-jdk
 
 
 ## Install Zookeeper
