--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
 # setup
 zookeeper_version: 3.8.0
-zookeeper_download_url: 'https://dlcdn.apache.org/zookeeper/zookeeper-{{zookeeper_version}}/zookeeper-{{zookeeper_version}}.tar.gz'
-zookeeper_binary_archive: /opt/zookeeper-{{zookeeper_version}}.tar.gz
-zookeeper_binary_dir: /opt/zookeeper-{{zookeeper_version}}
+zookeeper_download_url: 'https://dlcdn.apache.org/zookeeper/zookeeper-{{zookeeper_version}}/apache-zookeeper-{{zookeeper_version}}-bin.tar.gz'
+zookeeper_binary_archive: /opt/apache-zookeeper-{{zookeeper_version}}.tar.gz
+zookeeper_binary_dir: /opt/apache-zookeeper-{{zookeeper_version}}
 
 # configuration
 zookeeper_hosts: localhost
