Update script to force link

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -45,6 +45,7 @@
   file:
     src={{zookeeper_binary_dir}}
     path=/opt/zookeeper
+    force=yes
     state=link
 
 - name: install zookeeper init script
