--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -46,6 +46,7 @@
     src={{zookeeper_binary_dir}}
     dest=/opt/zookeeper
     state=link
+    force=yes
 
 - name: install zookeeper init script
   template: src=zookeeper-server.j2 dest=/etc/init.d/zookeeper-server mode=0755
