--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -47,6 +47,7 @@
     dest=/opt/zookeeper
     state=link
     force=yes
+    follow=false
 
 - name: install zookeeper init script
   template: src=zookeeper-server.j2 dest=/etc/init.d/zookeeper-server mode=0755
