--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -42,7 +42,7 @@
     group={{zookeeper_group}}
 
 - name: Delete the zookeeper tar
-  shell: rm {zookeeper_binary_archive}}
+  shell: rm {{zookeeper_binary_archive}}
 
 - name: Rename directory
   shell: mv `ls -d -1 {{zookeeper_binary_dir}}*` {{zookeeper_binary_dir}}
